<resources>
    <string name="app_name">Wheel Of Jeopardy</string>
    <string name="action_settings">Settings</string>

    <string name="category_one">Category One</string>
    <string name="category_two">Category Two</string>
    <string name="category_three">Category Three</string>
    <string name="category_four">Category Four</string>
    <string name="category_five">Category Five</string>
    <string name="category_six">Category Six</string>

    <string name="hundred_one">100</string>
    <string name="hundred_two">200</string>
    <string name="hundred_three">300</string>
    <string name="hundred_four">400</string>
    <string name="hundred_five">500</string>
    <string name="title_activity_welcome_screen">WelcomeScreenActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_eng_game">EngGameActivity</string>
    <string name="WoJLogo">wheelOfJeopardyLogo</string>
    <string name="start_game_btn">Start Game</string>
    <string name="woj_logo">Wheel Of Jeopardy Logo</string>
</resources>
